# ParallelScan

./: .clang-format  .gitignore  CMakeLists.txt  build-arch.sh  build.sh  omp_scheduling_bench.sh  readme.md  run_tile_bench.sh
benchmark/: benchmark-analytical.cpp  benchmark-memory.cpp  benchmark.cpp  data.hpp  iterator.hpp
common/: csv_reporter.cpp  csv_reporter.hpp  logrange_generator.hpp
documentation/: algopt.tex  factors.csv  local.tex  makegraph.py  outlook.tex  partitioner.tex  plots.py  presentation.tex  scan_theory.tex  scheduling.tex  segmented.tex  summary.tex  tiled.tex  updown.tex  vector.tex  workplan.tex
documentation/results/: mp-media-copy.csv  mp-media-gnu-algopt-ana.csv  mp-media-gnu-algopt.csv  mp-media-gnu-ana.csv  mp-media-gnu-omp-no-SIMD.csv  mp-media-gnu-oop.csv  mp-media-gnu-tbb-affinity.csv  mp-media-gnu-tbb-affinitypart.csv  mp-media-gnu-tbb-auto.csv  mp-media-gnu-tbb-autopart.csv  mp-media-gnu-tbb-simple.csv  mp-media-gnu-tbb-simplepart.csv  mp-media-gnu-tbb-static.csv  mp-media-gnu-tbb-staticpart.csv  mp-media-gnu-tbb_partitioners.csv  mp-media-gnu-tiled-ana.csv  mp-media-gnu-tiled.csv  mp-media-gnu-tilesize.csv  mp-media-gnu.csv  mp-media-icpx-omp-no-SIMD.csv  mp-media-icx.csv  mp-media-omp-simd.csv  mp-media-omp.csv  mp-media.csv  mp_media_gnu_omp_no_simd_scheduling_auto.csv  mp_media_gnu_omp_no_simd_scheduling_auto_media1.csv  mp_media_gnu_omp_no_simd_scheduling_auto_media2.csv  mp_media_gnu_omp_no_simd_scheduling_dynamic.csv  mp_media_gnu_omp_no_simd_scheduling_dynamic_media1.csv  mp_media_gnu_omp_no_simd_scheduling_dynamic_media2.csv  mp_media_gnu_omp_no_simd_scheduling_guided.csv  mp_media_gnu_omp_no_simd_scheduling_guided_media1.csv  mp_media_gnu_omp_no_simd_scheduling_guided_media2.csv  mp_media_gnu_omp_no_simd_scheduling_static.csv  mp_media_gnu_omp_no_simd_scheduling_static_media1.csv  mp_media_gnu_omp_no_simd_scheduling_static_media2.csv  mp_media_gnu_omp_scheduling_auto.csv  mp_media_gnu_omp_scheduling_auto_media1.csv  mp_media_gnu_omp_scheduling_auto_media2.csv  mp_media_gnu_omp_scheduling_dynamic.csv  (+62 more)
include/: scan-naive.hpp  scan-openmp-provided.hpp  scan-openmp-tiled.hpp  scan-openmp-updown.hpp  scan-openmp.hpp  scan-sequential-naive.hpp  scan-sequential-tiled.hpp  scan-sequential-updown.hpp  scan-tbb-provided.hpp  scan-tbb-tiled.hpp  scan-tbb-updown.hpp  scan-tbb.hpp  scan.cpp  scan.hpp
test/: test.cpp
